tests/negative/runtime/float_division_by_zero_compound/input.ci
void main() {
    float x = 4.0;
    x /= 0.0;
    print(toString(x) + "\n");
}
